--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,13 +15,12 @@ main {
 
 section {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: auto auto auto;
 }
 
 section > article {
     background-color: #f2f2f2;
     margin: 10px;
-    min-width: 200px;
     padding: 10px;
 }
 
@@ -34,20 +33,22 @@ section > article {
     display: none;
 }
 
-.links a {
+.buttons {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.buttons a {
     background-color: red;
     color: white;
     margin: 5px;
     padding: 15px;
+    text-align: center;
     text-decoration: none;
 }
 
-.links a:hover {
+.buttons a:hover {
     text-decoration: underline;
-}
-
-.links p {
-    margin-top: 50px;
 }
 
 .title-and-x-close-button {
@@ -59,4 +60,50 @@ section > article {
     align-items: start;
     justify-items: start;
     justify-content: space-between;
+}
+
+.title-and-x-close-button > form {
+    margin-left: 10px;
+}
+
+/* media queries */
+@media screen and (max-width: 759px) {
+
+    /*PLUS DE COLONNES GRID ICI, QUE DU FLEX*/
+    main, section {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+}
+
+/* @media screen and (min-width: 760px) and (max-width: 960px) {
+    body
+    {
+        font-size: 1em;
+    }
+    div, figure, figcaption {
+        width: 150px;
+    }
+}
+
+@media screen and (min-width: 961px) and (max-width: 1100px) {
+    body
+    {
+        font-size: 1.2em;
+    }
+    div, figure, figcaption {
+        width: 200px;
+    }
+}
+
+@media screen and (min-width: 1100px) {
+    body
+    {
+        font-size: 1.3em;
+    }
+    div, figure, figcaption {
+        width: 250px;
+    } */
 }
