--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,7 +15,7 @@ main {
 
 section {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
 section > article {
